--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">unit conversion</string>
+    <string name="app_name">UNIT CONVERTER</string>
     <string name="unit_convert">UNIT CONVERT</string>
     <string name="length">length</string>
     <string name="weight">weight</string>
@@ -11,4 +11,5 @@
     <string name="convert">convert</string>
     <string name="_1">1</string>
     <string name="angle">angle</string>
+    <string name="data">data</string>
 </resources>
